css/min.css
/* ... */
.components-static-modal .modal-dialog,
.components-static-modal .modal-content {
  width: auto;
}
.components-static-modal .modal-dialog {
  padding: 0;
}
.demo-sidebar {
  font-size: 14px;
  line-height: 1.214;
  height: 100%;
  left: 0;
  margin: 0;
  list-style-type: none;
  overflow: auto;
  position: fixed;
  top: 0;
  padding: 0;
  width: 150px;
  z-index: 10000;
  background-color: #f3f4f5;
  -webkit-backface-visibility: hidden;
  -webkit-font-smoothing: subpixel-antialiased;
}
.demo-sidebar li:first-child a {
  padding-top: 20px;
}
.demo-sidebar a {
  display: block;
  padding: 7px 20px;
}
@media (max-width: 767px) {
  .demo-row {
    margin-bottom: 0;
    margin-left: 0;
    padding-left: 0;
    padding-right: 0;
    width: auto;
  }
  .demo-col,
  .demo-content,
  .demo-content-wide,
  .demo-title {
    float: none;
    margin: 0 0 18px !important;
    padding: 0 !important;
    width: auto;
  }
  .demo-headline {
    font-size: 65px !important;
    text-align: left;
    padding-left: 15px;
    padding-right: 15px;
  }
  .demo-inline {
    display: block;
  }
  .demo-navigation .btn-toolbar {
    margin: 0;
  }
  .demo-navigation .pager {
    display: block;
    margin-left: 0 !important;
    margin-bottom: 20px;
  }
  .typography-row .demo-type-example {
    padding-left: 0 !important;
  }
  .typography-row .demo-heading-note,
  .typography-row .demo-text-note {
    position: static !important;
    margin: 0 0 10px;
  }
  .demo-illustrations .demo-content-wide > div {
    margin-left: 67px;
  }
}
@media (max-width: 480px) {
  .demo-illustrations .demo-content-wide > div {
    margin-left: 23px;
  }
  .demo-navigation .mll.pvl {
    padding: 0;
    margin-left: 0 !important;
    margin-bottom: 20px;
  }
}

.dropdown-arrow-inverse {
  border-bottom-color: #34495e !important;
  border-top-color: #34495e !important;
}
.container {
  max-width: 970px !important;
}
.demo-headline {
  padding: 60px 0 5px;
  text-align: center;
}
.demo-logo {
  font: 900 90px/100px "Helvetica Neue", Helvetica, Arial, sans-serif;
  letter-spacing: -2px;
  margin: 10px 0;
}
/*
.demo-logo .logo {
  background: url(../images/demo/logo-mask.png?jcb=1389111820) center 0 no-repeat;
  background-size: 236px 181px;
  height: 181px;
  margin: 0 auto 26px;
  overflow: hidden;
  text-indent: -9999em;
  width: 236px;
}
*/
.demo-logo small {
  color: rgba(52, 73, 94, 0.30000000000000004);
  display: block;
  font-size: 22px;
  font-weight: 700;
  letter-spacing: 0;
  padding-top: 5px;
}
.demo-row {
  margin-bottom: 20px;
}
.demo-row .demo-heading-note,
.demo-row .demo-text-note {
  display: block;
  width: 260px;
  position: absolute;
  bottom: 10px;
  left: 0;
  font-size: 13px;
  line-height: 13px;
  color: #c0c1c2;
  font-weight: 400;
}
.demo-row .demo-text-note {
  bottom: auto;
  top: 10px;
}
.demo-row.typography-row .demo-content {
  float: none;
  width: auto;
  clear: both;
}
.demo-row.typography-row .demo-type-example {
  padding-left: 25%;
  margin-bottom: 40px;
  position: relative;
}
.demo-section-title {
  font: 900 32px/40px "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 10px 0;
}
.demo-panel-title {
  padding-top: 20px;
  margin: 2px 0 20px;
  font: bold 23px/40px "Helvetica Neue", Helvetica, Arial, sans-serif;
}
.demo-panel-title small {
  color: #798795;
  font-size: inherit;
  font-weight: 400;
}
.demo-navigation {
  margin-bottom: -4px;
  margin-top: -10px;
}
.demo-pager {
  margin-top: -20px;
}
.demo-tooltips {
  height: 126px;
}
.demo-tooltips .tooltip {
  left: -8px !important;
  position: relative !important;
  top: -8px !important;
}
.demo-headings {
  margin-bottom: 12px;
}
.demo-tiles {
  margin-bottom: 46px;
}
.demo-icons {
  font-size: 32px;
  margin-left: -20px;
  padding-left: 20px;
}
.demo-icons .demo-content {
  margin: 0 0 0 -35px;
}
.demo-icons .demo-content > span {
  display: inline-block;
  margin: 0 0 32px 35px;
  width: 24px;
  font-size: 24px;
}
.demo-icons-tooltip {
  bottom: 0;
  color: #c2c8cf;
  font-size: 12px;
  left: 100%;
  margin-left: 0 !important;
  position: absolute;
  width: 80px;
}
.demo-illustrations .demo-content {
  margin: 0 0 0 -40px;
  padding-top: 20px;
}
.demo-illustrations .demo-content:before,
.demo-illustrations .demo-content:after {
  content: " ";
  /* 1 */

  display: table;
  /* 2 */

}
.demo-illustrations .demo-content:after {
  clear: both;
}
.demo-illustrations .demo-content > div {
  float: left;
  width: 100px;
  height: 100px;
  line-height: 100px;
  margin: 0 0 40px 40px;
  text-align: center;
}
.demo-illustrations img {
  display: inline-block;
  max-height: 100px;
  max-width: 100px;
  vertical-align: middle;
}
.demo-samples {
  margin-bottom: 46px;
}
.demo-video {
  padding-top: 95px;
  border-radius: 6px;
}
.demo-download-section {
  float: none;
  margin: 0 auto;
  padding: 60px 0 90px 20px;
  text-align: center;
}
.demo-download-section [class*='fui-'] {
  margin: 3px 0 -3px;
}
.demo-download {
  background-color: #ebedef;
  height: 190px;
  margin: 0 auto 32px;
  padding: 40px 28px 30px 32px;
  text-align: center;
  width: 190px;
  border-radius: 50%;
}
.demo-download img {
  height: 104px;
  width: 82px;
}
.demo-download-text {
  font-size: 15px;
  padding: 20px 0;
  text-align: center;
}
.demo-text-box a:hover {
  color: #1abc9c;
}
.demo-browser {
  background: #2c3e50 url(../images/demo/browser.png?jcb=1389111820) 0 0 no-repeat;
  background-size: 659px 42px;
  color: #ffffff;
  margin: 0 41px 140px 0;
  padding-top: 42px;
  border-radius: 0 0 6px 6px;
}
.demo-browser-side {
  float: left;
  padding: 22px 20px;
  width: 151px;
}
.demo-browser-side > h5 {
  font-size: 16px;
  margin-top: 4px;
  margin-bottom: 3px;
  text-transform: none;
  font-weight: 400;
}
.demo-browser-side > h6 {
  font-size: 11px;
  font-weight: 300;
  line-height: 18px;
  margin-top: 3px;
  text-transform: none;
  -webkit-font-smoothing: subpixel-antialiased;
}
/* ... */

